Update history resource
