# iot/api/resources/history.py
@@ -1,7 +1,7 @@
 '''
 History Resource
 '''
-from datetime import datetime, timedelta
+from datetime import datetime
 
 from flask_restful import Resource, reqparse
 from sqlalchemy.sql.expression import and_
@@ -13,56 +13,31 @@ class History(Resource):
     '''
     get: return history data
     '''
-    def __init__(self):
-        self.parser = reqparse.RequestParser()
-        self.parser.add_argument('name')
-        self.parser.add_argument('start', type=int)
-        self.parser.add_argument('end', type=int)
-        self.parser.add_argument('interval', type=int)
-
-    def get(self):
+    @staticmethod
+    def get():
         '''
         Get history data
-        ---
-        tags:
-          - history
-        parameters:
-          - in: query
-            name: name
-            type: string
-          - in: query
-            name: start
-            type: integer
-          - in: query
-            name: end
-            type: integer
-          - in: query
-            name: interval
-            type: integer
-        responses:
-          200:
-            description: List of data
-          400:
-            description: Missing arguments
         '''
-        args = self.parser.parse_args()
-        if args['start'] is None or args['end'] is None or args['interval'] is None:
-            return {'message': 'Missing arguments'}, 400
+        parser = reqparse.RequestParser()
+        parser.add_argument('name', required=True)
+        parser.add_argument('start', type=int, required=True)
+        parser.add_argument('end', type=int, required=True)
+        parser.add_argument('interval', type=int, required=True)
+        args = parser.parse_args()
 
         device = db.session.query(Device).filter(
             Device.name == args.name).first()
         if not device:
-            return {'message': '{} do not exist'.format(args['name'])}, 400
+            return {'message': '{} do not exist'.format(args.name)}, 404
 
         json_data = [] #Empty list
-        days_start = datetime.utcfromtimestamp(args['start'])
-        days_end = datetime.utcfromtimestamp(args['end'])
-        interval = args['interval']
-        print(days_start)
-        print(days_end)
+        days_start = datetime.utcfromtimestamp(args.start)
+        days_end = datetime.utcfromtimestamp(args.end)
+        interval = args.interval
+
         history_data = device.data.filter(
             and_(DeviceData.time >= days_start, DeviceData.time <= days_end)).all()
-        print(history_data)
+
         number = interval - (len(history_data) % interval)#初始取值，使最后一个为最新数据
         for status in history_data:
             number += 1
@@ -72,7 +47,8 @@ class History(Resource):
                 #'Sat, 24 Feb 2018 02:41:56 GMT'
                 data = status.get_data()
 
-                if data['data']['temperature'] == 'Error' or data['data']['relative_humidity'] == 'Error':
+                if data['data']['temperature'] == 'Error' or \
+                   data['data']['relative_humidity'] == 'Error':
                     continue #Skip None
                 history['time'] = data['data']['time'] #24-02-2018 02:41:56
                 history['temperature'] = data['data']['temperature']
